# tinytorchtest

./: .gitignore  README.adoc  README.md  multi_arg_nn.py  pyproject.toml  requirements.txt  setup.py  shell.nix  test_networks.py  test_torchtest.py
hooks/: pre-push
tests/: test_networks.py  test_torchtest.py
tinytorchtest/: tinytorchtest.py
torchtest/: torchtest.py
