[tool.poetry]
name = "tinytorchtest"
version = "0.7.0"
description = "A tiny test suite for pytorch based machine learning models."
authors = ["Alex <adrysdale@protonmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/abdrysdale/tinytorchtest"
readme = "README.md"
keyowrds = ["pytorch", "torch", "test", "tests", "mltest"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
